# mughal_shatranj

./: .gitignore  CMakeLists.txt  CODE_DOCUMENTATION.md  Chess Engine - Technical Documentation.docx
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  Exceptions.h  Game.cpp  Game.h  HumanPlayer.cpp  HumanPlayer.h  LeaderBoard.cpp  LeaderBoard.h  Player.h  Renderer.cpp  Renderer.h  main.cpp  test_main.cpp
src/pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/primitives/: Enums.h  Move.h  Position.h
